--- a/sea-battle/src/App.css
+++ b/sea-battle/src/App.css
@@ -1,38 +1,29 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  background-color: #bdd9eb;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(6, 2, 49);
 }
 
-.App-link {
-  color: #61dafb;
+.Field {
+  background-color: '#87CEFA;'
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Field-item {
+  width: 35px;
+  height: 35px;
+  border: 1px solid rgb(6, 2, 49);
+}
+
+.Field-top {
+  border-top: 0;
+}
+
+.Field-left {
+  border-left: 0;
 }
