--- a/sea-battle/src/App.css
+++ b/sea-battle/src/App.css
@@ -10,20 +10,20 @@
   color: rgb(6, 2, 49);
 }
 
-.Field {
+.field {
   background-color: '#87CEFA;'
 }
 
-.Field-item {
+.field-item {
   width: 35px;
   height: 35px;
   border: 1px solid rgb(6, 2, 49);
 }
 
-.Field-top {
+.field-top {
   border-top: 0;
 }
 
-.Field-left {
+.field-left {
   border-left: 0;
 }
